--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             display: flex;
             justify-content: center;
             height: 100vh;
+            widht
         }
         .box{
+            justify-items: center;
             background-color: antiquewhite;
             padding: 100px;
             border-radius: 30px;
             box-shadow: 1px 3px 4px gray;
+            width: 50vh;
         }
     </style>
 </head>
